Sun Jul  2 11:25:21 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/irc-network.c:
	  - Add TIS-620 character set. (#346396)

Thu Jun 29 15:10:22 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* plugins/notify-osd/notify-osd.c:
	  - Always escape message. (#346132)

Thu Jun 29 11:02:22 BST 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/dcc-window.c:
	  - Fix DCC stop crasher and timeout handling bug.

Sun Jun 25 11:22:27 CEST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Show a different context menu for channels in the navigation tree
	    based on whether or not the channel is joined.  This allows users
	    to re-join a channel with the context menu. (#344980)


Wed Jun 21 16:21:17 MDT 2006  Isak Savo <iso01001@student.mdh.se>

	* plugins/autoaway/autoaway.h:
	* plugins/autoaway/autoaway.c:
	  - Fix a potential crasher in the autoaway plugin. (#342104)

Wed Jun 21 15:29:49 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	  - Maybe fix a race condition that could cause a crash if a tooltip
	    tries to pop up after the window is closed. (#343356)

Wed Jun 21 03:50:41 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/autoaway/xscreensaver.c:
	  - Rename "stdout" to "out" to be less confusing.

Wed Jun 21 02:05:28 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* po/*:
	  - Update translations from the rosetta dapper branch, since that
	    seems to be where everyone is doing stuff.

Tue Jun 20 18:37:48 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-spellcheck.c:
	  - If libenchant is not installed, or there are no dictionaries, show
	    a short message indicating how to get spell-checking working
	    rather than an empty language-selector list. (#345199)

Tue Jun 20 18:16:52 MDT 2006  David Trowbridge <trowbrds@gmail.com>
