@@ -1,3 +1,9 @@
+Sun Jul  2 12:58:20 MDT 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/preferences-page-networks.c:
+	* src/fe-gnome/irc-network-editor.c:
+	  - Make network settings dialog non-modal. (#346188)
+
 Sun Jul  2 11:25:21 MDT 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/irc-network.c:
